# analyst_agent_chat

./: .gitignore  Dockerfile  README.md  compose.yaml  knowledge.json  knowledge_index.json  knowledge_meta.json  knowledge_vectors.npy  pyproject.toml  reflection_meta.json  reflection_vectors.npy  report.txt  tool_cache.json
config/: task.yaml
src/analyst_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/analyst_agent_chat/: __init__.py  agent.py  api.py  chat_controller.py  chat_memory.py  coordinator.py  memory.py  planner.py  test_autonomous.py  tools.py
src/analyst_agent_chat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/analyst_agent_chat/agents/: analyst.py  intent_resolver.py  presenter.py  researcher.py  reviewer.py  router.py
src/analyst_agent_chat/controller/: chat_controller.py
src/analyst_agent_chat/core/: autonomous_engine.py  engine_registry.py  llm.py  logger.py  tool.py  tool_registry.py  tools.py
src/analyst_agent_chat/engines/: autonomous_engine.py  base_engine.py  chat_engine.py  deep_analysis_engine.py  lookup_engine.py
src/analyst_agent_chat/memory/: agent_memory.py  conversation_memory.py  knowledge_base.py  knowlege_base.py  relection_memory.py  tool_cache.py
src/analyst_agent_chat/routing/: intent_resolver.py
src/analyst_agent_chat/test/: test_autonomous.py
